# call-the-police-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/call-the-police-bot/: Cargo.toml
crates/call-the-police-bot/src/: handlers.rs  main.rs  util.rs
crates/call-the-police-bot/src/observability/: resource.rs  tracing.rs
crates/call-the-police-bot/src/services/: chat_stat.rs  mod.rs  user_stat.rs
crates/entities/: Cargo.toml
crates/entities/src/: lib.rs  stat_chat.rs  stat_user.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240110_000000_create_chat_stat_table.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  metrics.rs  resource.rs  tracing.rs
src/: handlers.rs  main.rs  util.rs
src/observability/: mod.rs  resource.rs  tracing.rs
