[workspace]
resolver = "2"
members = [
    "crates/*"
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[workspace.dependencies]
observability = { path = "crates/observability" }

log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
anyhow = "1.0"

opentelemetry = "0.23"
opentelemetry-otlp = { version = "0.16" }
opentelemetry_sdk = { version = "0.23" }
opentelemetry-semantic-conventions = "0.15"
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3" }

teloxide = "0.12"
