[package]
name = "call-the-police-bot"
version = "1.2.0"
edition = "2021"

[[bin]]
name = "call-the-police-bot"
path = "src/main.rs"

[dependencies]
observability = { workspace = true }

log = { workspace = true }
pretty_env_logger = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

teloxide = { workspace = true, features = ["macros", "webhooks", "webhooks-axum"] }
reqwest = "0.11" # for teloxide
rand = "0.8"
sea-orm = { workspace = true }
